# modelbench

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: metrics.md
examples/: onnx_comparison.py  resnet_benchmark.py
modelbench/: __init__.py  cli.py  compare.py  config.py  runner.py
modelbench/loaders/: __init__.py  base.py  onnx.py  pytorch.py
modelbench/metrics/: __init__.py  base.py  flops.py  latency.py  memory.py  model_size.py  throughput.py
modelbench/reporters/: __init__.py  base.py  json_reporter.py  markdown_reporter.py  terminal_reporter.py
tests/: helpers.py
tests/integration/: test_cli_misc.py  test_cli_run.py
tests/unit/: test_compare.py  test_config.py  test_flops.py  test_latency.py  test_memory.py  test_model_size.py  test_onnx_loader.py  test_reporters.py  test_throughput.py
