[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelbench"
version = "0.1.0"
description = "Benchmark ML models across production-focused inference metrics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" },
]
dependencies = [
  "click>=8.1",
  "numpy>=1.24",
  "onnxruntime>=1.16",
  "psutil>=5.9",
  "pydantic>=2.0",
  "rich>=13.0",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "fvcore>=0.1.5",
  "mypy>=1.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1",
  "thop>=0.1.1",
]
gpu = [
  "pynvml>=11.0",
]

[project.scripts]
modelbench = "modelbench.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["modelbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

